# octorules-aws

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  lint.yaml  release.yaml  test.yaml
docs/: lint.md
octorules_aws/: __init__.py  _acl_settings.py  _phases.py  _statement_util.py  audit.py  provider.py  validate.py
octorules_aws/linter/: __init__.py  _plugin.py  _rules.py
scripts/hooks/: pre-commit
tests/: conftest.py  test_acl_settings.py  test_audit.py  test_cli_lint.py  test_provider.py  test_statement_util.py  test_validate.py
tests/test_linter/: conftest.py  test_context.py  test_plugin.py
