[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "octorules-aws"
version = "0.5.2"
description = "AWS WAF provider for octorules"
license = "Apache-2.0"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "Martin Simon" },
    { name = "Doctena S.A." },
]
keywords = ["aws", "waf", "rules", "iac", "octorules"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "octorules>=0.19.0",
    "boto3>=1.26,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "build",
]

[project.urls]
Homepage = "https://github.com/doctena-org/octorules-aws"
Repository = "https://github.com/doctena-org/octorules-aws"
Issues = "https://github.com/doctena-org/octorules-aws/issues"

[project.entry-points."octorules.providers"]
aws = "octorules_aws:AwsWafProvider"

[tool.setuptools.packages.find]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
